--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^18.1.1",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/flex-layout": "15.0.0-beta.42",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^15.2.2",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "rxjs": "~7.8.0",
+    "cdk": "link:@angular\\cdk",
+    "notiflix": "^3.2.7",
+    "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
